--- a/CoMS/CoMS/Resources/StringResource.resx
+++ b/CoMS/CoMS/Resources/StringResource.resx
@@ -117,14 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Account_does_not_exist" xml:space="preserve">
+    <value>Tài khoản không tồn tại.</value>
+  </data>
+  <data name="Data_not_received" xml:space="preserve">
+    <value>Chưa nhận được dữ liệu.</value>
+  </data>
+  <data name="Email_already_exists" xml:space="preserve">
+    <value>Email đã tồn tại.</value>
+  </data>
+  <data name="Email_does_not_exist" xml:space="preserve">
+    <value>Email không tồn tại.</value>
+  </data>
+  <data name="Email_invalid" xml:space="preserve">
+    <value>Email không hợp lệ.</value>
+  </data>
   <data name="English" xml:space="preserve">
     <value>Tiếng Anh</value>
+  </data>
+  <data name="Forgot_password" xml:space="preserve">
+    <value>Khôi phục mật khẩu.</value>
+  </data>
+  <data name="Password_is_incorrect" xml:space="preserve">
+    <value>Mật khẩu không đúng.</value>
+  </data>
+  <data name="Password_must_not_be_less_than_6_characters" xml:space="preserve">
+    <value>Mật khẩu không được nhỏ hơn 6 ký tự.</value>
+  </data>
+  <data name="Please_enter_email" xml:space="preserve">
+    <value>Vui lòng nhập email.</value>
+  </data>
+  <data name="Please_enter_fullname" xml:space="preserve">
+    <value>Vui lòng nhập họ và tên.</value>
+  </data>
+  <data name="Please_enter_password" xml:space="preserve">
+    <value>Vui lòng nhập mật khẩu.</value>
+  </data>
+  <data name="Please_enter_username" xml:space="preserve">
+    <value>Vui lòng nhập tài khoản.</value>
+  </data>
+  <data name="Sorry_an_error_has_occurred" xml:space="preserve">
+    <value>Xin lỗi, đã có lỗi xảy ra.</value>
   </data>
   <data name="Success" xml:space="preserve">
     <value>Success</value>
   </data>
+  <data name="Username_already_exists" xml:space="preserve">
+    <value>Tài khoản đã tồn tại.</value>
+  </data>
+  <data name="Username_must_not_be_less_than_6_characters" xml:space="preserve">
+    <value>Tài khoản không được nhỏ hơn 6 ký tự.</value>
+  </data>
+  <data name="Username_name_does_not_exist" xml:space="preserve">
+    <value>Tền tài khoản không tồn tại.</value>
+  </data>
   <data name="Username_or_password_incorrect" xml:space="preserve">
-    <value>Tài khoản hoặc mật khẩu không chính xác</value>
+    <value>Tài khoản hoặc mật khẩu không chính xác.</value>
   </data>
   <data name="Vietnamese" xml:space="preserve">
     <value>Tiếng Việt</value>
