--- a/CoMS/CoMS/Resources/StringResource.resx
+++ b/CoMS/CoMS/Resources/StringResource.resx
@@ -117,11 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>about</value>
+  </data>
+  <data name="About_an_hour_ago" xml:space="preserve">
+    <value>khoảng một giờ trước</value>
+  </data>
+  <data name="About_a_minute_ago" xml:space="preserve">
+    <value>khoảng một phút trước</value>
+  </data>
+  <data name="About_a_month_ago" xml:space="preserve">
+    <value>khoảng một tháng trước</value>
+  </data>
+  <data name="About_a_year_ago" xml:space="preserve">
+    <value>khoảng một năm trước</value>
+  </data>
   <data name="Account_does_not_exist" xml:space="preserve">
     <value>Tài khoản không tồn tại.</value>
   </data>
   <data name="Data_not_received" xml:space="preserve">
     <value>Chưa nhận được dữ liệu.</value>
+  </data>
+  <data name="Days_ago" xml:space="preserve">
+    <value>ngày trước</value>
   </data>
   <data name="Email_already_exists" xml:space="preserve">
     <value>Email đã tồn tại.</value>
@@ -137,6 +155,15 @@
   </data>
   <data name="Forgot_password" xml:space="preserve">
     <value>Khôi phục mật khẩu.</value>
+  </data>
+  <data name="Hours_ago" xml:space="preserve">
+    <value>giờ trước</value>
+  </data>
+  <data name="Minutes_ago" xml:space="preserve">
+    <value>phút trước</value>
+  </data>
+  <data name="Months_ago" xml:space="preserve">
+    <value>tháng trước</value>
   </data>
   <data name="Password_is_incorrect" xml:space="preserve">
     <value>Mật khẩu không đúng.</value>
@@ -155,6 +182,12 @@
   </data>
   <data name="Please_enter_username" xml:space="preserve">
     <value>Vui lòng nhập tài khoản.</value>
+  </data>
+  <data name="Seconds_ago" xml:space="preserve">
+    <value>seconds ago</value>
+  </data>
+  <data name="Server_fcm_key" xml:space="preserve">
+    <value>AIzaSyBuUdOTXwtg66HCjLJUw3rmyl-rdFw3LWo</value>
   </data>
   <data name="Sorry_an_error_has_occurred" xml:space="preserve">
     <value>Xin lỗi, đã có lỗi xảy ra.</value>
@@ -176,5 +209,17 @@
   </data>
   <data name="Vietnamese" xml:space="preserve">
     <value>Tiếng Việt</value>
+  </data>
+  <data name="Years_ago" xml:space="preserve">
+    <value>năm trước</value>
+  </data>
+  <data name="Yesterday" xml:space="preserve">
+    <value>hôm qua</value>
+  </data>
+  <data name="You_have_bookmark_this_person" xml:space="preserve">
+    <value>You have bookmark this person.</value>
+  </data>
+  <data name="Delete_list_message_fail" xml:space="preserve">
+    <value>Xóa danh sách tin nhắn thất bại.</value>
   </data>
 </root>
